// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dragon description: timeInCave 0, dragonPoisoned false, clothesPoopy false, naked false, playerLocation dung, berryLocation inventory,  1`] = `""`;

exports[`dragon description: timeInCave 1, dragonPoisoned false, clothesPoopy false, naked false, playerLocation dung, berryLocation inventory,  1`] = `"You hear coins clanking from the other room, as if a large beast is rising from a sea of treasure. "`;

exports[`dragon description: timeInCave 2, dragonPoisoned false, clothesPoopy false, naked false, playerLocation dung, berryLocation inventory,  1`] = `"You hear the dragon just outside. "`;

exports[`dragon description: timeInCave 3, dragonPoisoned false, clothesPoopy false, naked false, playerLocation dung, berryLocation inventory,  1`] = `
"The dragon prowls into the cavern. "I KNEW I SMELT A HUMAN." You hide in a nearby crevice to avoid death, but the dragon still manages to singe you. 

As you exit the crevice and smother the flames, you hear the dragon return to its lair to guard its treasure."
`;

exports[`lawn description: naked false, babyCough false, playerCough false 1`] = `
"You hear a voice: "My baby! You saved my baby! Please take this gold as thanks." 

Behind you, you hear the roof collapse. Finally, the crowd is able to douse the flames. "
`;

exports[`lawn description: naked false, babyCough false, playerCough true 1`] = `
"You hear a voice: "My baby! You saved my baby! Please take this gold as thanks." 

As you take the gold, you let out a racking cough. It seems that you should have taken measures to avoid breathing the smoke. They pass you the gold quickly, eager to get away from your coughing. 

Behind you, you hear the roof collapse. Finally, the crowd is able to douse the flames. "
`;

exports[`lawn description: naked false, babyCough true, playerCough false 1`] = `
"You hear a voice: "My baby! You saved my baby!" The baby coughs from the smoke. The parent glares at you, "My baby has a terrible cough from being carried through the smoke. Regardless, take this gold as thanks." 

Behind you, you hear the roof collapse. Finally, the crowd is able to douse the flames. "
`;

exports[`lawn description: naked false, babyCough true, playerCough true 1`] = `
"You hear a voice: "My baby! You saved my baby!" The baby coughs from the smoke. The parent glares at you, "My baby has a terrible cough from being carried through the smoke. Regardless, take this gold as thanks." 

As you take the gold, you let out a racking cough. It seems that you should have taken measures to avoid breathing the smoke. They pass you the gold quickly, eager to get away from your coughing. 

Behind you, you hear the roof collapse. Finally, the crowd is able to douse the flames. "
`;

exports[`lawn description: naked true, babyCough false, playerCough false 1`] = `
"You hear a voice: "My baby! You saved my baby! Please take this gold as thanks. And perhaps buy yourself some clothes," they say, eyeing your naked body. 

Behind you, you hear the roof collapse. Finally, the crowd is able to douse the flames. "
`;

exports[`lawn description: naked true, babyCough false, playerCough true 1`] = `
"You hear a voice: "My baby! You saved my baby! Please take this gold as thanks. And perhaps buy yourself some clothes," they say, eyeing your naked body. 

As you take the gold, you let out a racking cough. It seems that you should have taken measures to avoid breathing the smoke. They pass you the gold quickly, eager to get away from your coughing. 

Behind you, you hear the roof collapse. Finally, the crowd is able to douse the flames. "
`;

exports[`lawn description: naked true, babyCough true, playerCough false 1`] = `
"You hear a voice: "My baby! You saved my baby!" The baby coughs from the smoke. The parent glares at you, "My baby has a terrible cough from being carried through the smoke. Regardless, take this gold as thanks. And perhaps buy yourself some clothes," they say, eyeing your naked body. 

Behind you, you hear the roof collapse. Finally, the crowd is able to douse the flames. "
`;

exports[`lawn description: naked true, babyCough true, playerCough true 1`] = `
"You hear a voice: "My baby! You saved my baby!" The baby coughs from the smoke. The parent glares at you, "My baby has a terrible cough from being carried through the smoke. Regardless, take this gold as thanks. And perhaps buy yourself some clothes," they say, eyeing your naked body. 

As you take the gold, you let out a racking cough. It seems that you should have taken measures to avoid breathing the smoke. They pass you the gold quickly, eager to get away from your coughing. 

Behind you, you hear the roof collapse. Finally, the crowd is able to douse the flames. "
`;
